--- a/package.xml
+++ b/package.xml
@@ -2,11 +2,11 @@
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
   <name>autoware_msgs</name>
-  <version>1.7.0</version>
+  <version>1.8.0</version>
   <description>Meta package for the autoware_msgs packages</description>
 
-  <maintainer email="mfc@autoware.org">M. Fatih Cırıt</maintainer>
-  <maintainer email="ryosuke.mitsudome@tier4.jp">Ryosuke Mitsudome</maintainer>
+  <maintainer email="mfc@autoware.org">Mete Fatih Cırıt</maintainer>
+  <maintainer email="ryohsuke.mitsudome@tier4.jp">Ryohsuke Mitsudome</maintainer>
   <maintainer email="yutaka.kondo@tier4.jp">Yutaka Kondo</maintainer>
   <license>Apache License 2.0</license>
 
