--- a/package.xml
+++ b/package.xml
@@ -2,14 +2,16 @@
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
   <name>autoware_map_msgs</name>
-  <version>1.7.0</version>
+  <version>1.8.0</version>
   <description>Autoware map messages package.</description>
 
-  <maintainer email="koji.minoda@tier4.jp">kminoda</maintainer>
-  <maintainer email="mfc@leodrive.ai">M. Fatih Cırıt</maintainer>
+  <maintainer email="mfc@autoware.org">Mete Fatih Cırıt</maintainer>
   <maintainer email="yutaka.kondo@tier4.jp">Yutaka Kondo</maintainer>
+  <maintainer email="ryohsuke.mitsudome@tier4.jp">Ryohsuke Mitsudome</maintainer>
 
   <license>Apache License 2.0</license>
+
+  <author>Koji Minoda</author>
 
   <buildtool_depend>ament_cmake_auto</buildtool_depend>
   <buildtool_depend>rosidl_default_generators</buildtool_depend>
