--- a/package.xml
+++ b/package.xml
@@ -2,11 +2,16 @@
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
   <name>autoware_vehicle_msgs</name>
-  <version>1.7.0</version>
+  <version>1.8.0</version>
   <description>Interfaces between core Autoware vehicle components</description>
-  <maintainer email="beginning.fan@autocore.ai">Apex.AI, Inc.</maintainer>
+
+  <maintainer email="mfc@autoware.org">Mete Fatih Cırıt</maintainer>
+  <maintainer email="ryohsuke.mitsudome@tier4.jp">Ryohsuke Mitsudome</maintainer>
   <maintainer email="yutaka.kondo@tier4.jp">Yutaka Kondo</maintainer>
+
   <license>Apache License 2.0</license>
+
+  <author email="beginning.fan@autocore.ai">beginning.fan</author>
 
   <buildtool_depend>ament_cmake_auto</buildtool_depend>
   <buildtool_depend>rosidl_default_generators</buildtool_depend>
