--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1bf42f62
-	base = b3dc1d1d
+	base = 04a910cd
 	trim = autoware_planning_msgs
-	trimbase = 
+	trimbase = b3dc1d1d
