--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1bf42f62
-	base = f2173028
+	base = e3479dc9
 	trim = autoware_vehicle_msgs
-	trimbase = 
+	trimbase = f2173028
