--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1bf42f62
-	base = a79f61bf
+	base = 6a9ee16f
 	trim = autoware_perception_msgs
-	trimbase = 
+	trimbase = a79f61bf
