--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1bf42f62
-	base = c04b872c
+	base = bb32250c
 	trim = autoware_map_msgs
-	trimbase = 
+	trimbase = c04b872c
