--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1bf42f62
-	base = 3ab127ab
+	base = 1afe43d1
 	trim = autoware_common_msgs
-	trimbase = 
+	trimbase = 3ab127ab
