--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1bf42f62
-	base = befba1ed
+	base = 0a3d640d
 	trim = autoware_sensing_msgs
-	trimbase = 
+	trimbase = befba1ed
