--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1bf42f62
-	base = 8dff63f9
+	base = 177b33bb
 	trim = autoware_system_msgs
-	trimbase = 
+	trimbase = 8dff63f9
