--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1bf42f62
-	base = 4072f5cb
+	base = 2b60bab9
 	trim = autoware_control_msgs
-	trimbase = 
+	trimbase = 4072f5cb
