--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1bf42f62
-	base = 8baaeac2
+	base = 2184b0b1
 	trim = autoware_v2x_msgs
-	trimbase = 
+	trimbase = 8baaeac2
