--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1bf42f62
-	base = 7794885d
+	base = 37c039d0
 	trim = autoware_localization_msgs
-	trimbase = 
+	trimbase = 7794885d
