--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1bf42f62
-	base = f2b8a4a3
+	base = d4b68244
 	trim = autoware_msgs
-	trimbase = 
+	trimbase = f2b8a4a3
