--- a/releaser_history.json
+++ b/releaser_history.json
@@ -1,1 +1,1 @@
-{"1.8.0-1": ["Wed May 21 2025", "Mete Fatih C\u0131r\u0131t", "mfc@autoware.org"], "1.7.0-1": ["Tue Apr 22 2025", "M. Fatih C\u0131r\u0131t", "mfc@autoware.org"], "1.6.0-1": ["Mon Apr 07 2025", "M. Fatih C\u0131r\u0131t", "mfc@autoware.org"]}
+{"1.9.0-1": ["Thu Jun 26 2025", "Mete Fatih C\u0131r\u0131t", "mfc@autoware.org"], "1.8.0-1": ["Wed May 21 2025", "Mete Fatih C\u0131r\u0131t", "mfc@autoware.org"], "1.7.0-1": ["Tue Apr 22 2025", "M. Fatih C\u0131r\u0131t", "mfc@autoware.org"], "1.6.0-1": ["Mon Apr 07 2025", "M. Fatih C\u0131r\u0131t", "mfc@autoware.org"]}
