--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 4bd7b5bf
-	base = b3f8892c
+	base = 4e9bf47b
 	trim = autoware_planning_msgs
-	trimbase = 
+	trimbase = b3f8892c
