--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 4bd7b5bf
-	base = 6d8afe93
+	base = a97b07da
 	trim = autoware_vehicle_msgs
-	trimbase = 
+	trimbase = 6d8afe93
