--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 4bd7b5bf
-	base = a3a07cb1
+	base = 6017639c
 	trim = autoware_perception_msgs
-	trimbase = 
+	trimbase = a3a07cb1
