--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 4bd7b5bf
-	base = 18fe9ec3
+	base = 7169ffc2
 	trim = autoware_map_msgs
-	trimbase = 
+	trimbase = 18fe9ec3
