--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 4bd7b5bf
-	base = f5f86df5
+	base = 29cbcc05
 	trim = autoware_common_msgs
-	trimbase = 
+	trimbase = f5f86df5
