--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 4bd7b5bf
-	base = be266a51
+	base = 9151ea8d
 	trim = autoware_sensing_msgs
-	trimbase = 
+	trimbase = be266a51
