--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 4bd7b5bf
-	base = db433fbe
+	base = 0021f5ee
 	trim = autoware_system_msgs
-	trimbase = 
+	trimbase = db433fbe
