--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 4bd7b5bf
-	base = 824ec50c
+	base = 2b157cf5
 	trim = autoware_control_msgs
-	trimbase = 
+	trimbase = 824ec50c
