--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 4bd7b5bf
-	base = 51fbd27d
+	base = ed21a8e2
 	trim = autoware_v2x_msgs
-	trimbase = 
+	trimbase = 51fbd27d
