--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 4bd7b5bf
-	base = 9d0e82ab
+	base = a4f2a5ad
 	trim = autoware_localization_msgs
-	trimbase = 
+	trimbase = 9d0e82ab
