--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 4bd7b5bf
-	base = 8b5b1f05
+	base = d529da38
 	trim = autoware_msgs
-	trimbase = 
+	trimbase = 8b5b1f05
