Store releaser history

--- a/releaser_history.json
+++ b/releaser_history.json
@@ -1,1 +1,1 @@
-{"1.9.0": ["Mete Fatih C\u0131r\u0131t", "mfc@autoware.org"], "1.8.0": ["Mete Fatih C\u0131r\u0131t", "mfc@autoware.org"], "1.7.0": ["M. Fatih C\u0131r\u0131t", "mfc@autoware.org"], "1.6.0": ["M. Fatih C\u0131r\u0131t", "mfc@autoware.org"]}
+{"1.10.0": ["Mete Fatih C\u0131r\u0131t", "mfc@autoware.org"], "1.9.0": ["Mete Fatih C\u0131r\u0131t", "mfc@autoware.org"], "1.8.0": ["Mete Fatih C\u0131r\u0131t", "mfc@autoware.org"], "1.7.0": ["M. Fatih C\u0131r\u0131t", "mfc@autoware.org"], "1.6.0": ["M. Fatih C\u0131r\u0131t", "mfc@autoware.org"]}
