--- a/package.xml
+++ b/package.xml
@@ -2,11 +2,12 @@
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
   <name>autoware_map_msgs</name>
-  <version>1.9.0</version>
+  <version>1.10.0</version>
   <description>Autoware map messages package.</description>
 
   <maintainer email="mfc@autoware.org">Mete Fatih Cırıt</maintainer>
   <maintainer email="yutaka.kondo@tier4.jp">Yutaka Kondo</maintainer>
+  <maintainer email="yukihiro.saito@tier4.jp">Yukihiro Saito</maintainer>
   <maintainer email="ryohsuke.mitsudome@tier4.jp">Ryohsuke Mitsudome</maintainer>
 
   <license>Apache License 2.0</license>
